src/Styles/DataCatalog.less
.data-catalog-top-group-header {
    display: table;
    width: 100%;
    line-height: 40px;
    border-bottom: 1px solid @panel-border-color;
    border-top: 1px solid @panel-border-color;
    cursor: pointer;
}

.data-catalog-top-group-label {
    display: table-cell;
    padding-left: 16px;
    font-size: 16px;
    color: #FFFFFF;
}

.data-catalog-top-group-contents {
    padding-left: 16px;
}

.data-catalog-member {
    line-height: 30px;
}

.data-catalog-member-top-row {
    display: table;
    width: 100%;
}

.data-catalog-item-label {
    display: table-cell;
    font-size: 16px;
    color: #CCCCCC;
    font-weight: lighter;
}

.data-catalog-group-label {
    display: table-cell;
    font-size: 16px;
    color: #CCCCCC;
}

.data-catalog-indent0 {
}

.data-catalog-indent1 {
    padding-left: 12px;
}

.data-catalog-indent2 {
    padding-left: 12px;
}

.data-catalog-indent3 {
    padding-left: 12px;
}

.data-catalog-icon {
    position: relative;
    width: 15px;
    height: 15px;
    fill: #CCCCCC;
}

.data-catalog-icon-holder {
    display: table-cell;
    width: 20px;
}

.data-catalog-item-info {
    display: table-cell;
    text-align: right;
    width: 20px;
}

.data-catalog-enabled-item {
    font-weight: normal;
    color: @highlight-color;
    fill: @highlight-color;
}

